Fixed events page on mobile and rounded images

--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -118,6 +118,7 @@
 }
 
 .events-listing .col {
+    width: 100%;
     padding: 0 !important;
 }
 
