--- a/src/styles.css
+++ b/src/styles.css
@@ -107,7 +107,6 @@ body {
 
 .rounded-image {
     border-radius: 36px;
-    border: 1px solid #666666;
 }
 
 .mbtn {
